add IDE run/debug config; update some dependencies;